# biomatrix_standalone

./: .gitignore  LICENSE  README.md  pyproject.toml
biomatrix/: __init__.py
biomatrix/core/: __init__.py  base.py  query.py  signatures.py  state.py  topology.py  transform.py
biomatrix/core/derive/: __init__.py  affine.py  algebra.py  core.py  lifting.py  lifting_kernels.py  permutation.py  procrustes.py  temporal.py  union.py
biomatrix/core/graph/: semantic.py
biomatrix/core/operators/: __init__.py  affine.py  algebra.py  base.py  core.py  lifting.py  logic.py  replication.py  selection.py  temporal.py
biomatrix/plugins/zeiss/: __init__.py  drift.py  fiber.py  fiducial.py  protocol.py  stream.py  tracker.py
docs/: DOCUMENTATION.md  OPERATOR_ALGEBRA.md  api.md
examples/: analyze_tasks.py  benchmark_affine.py  benchmark_semantic.py  benchmark_zeiss.py  demo_causality.py  demo_fraud_radar.py  demo_lidar_3d.py  demo_sensor_fusion.py  demo_sign_language.py  demo_stroke_topology.py  demo_transform_derivation.py  demo_walker_dynamics.py  example_1d_drift.py  example_2d_camera_drift.py  example_audio_drift.py  test_causal_groups.py  test_context_009d5c81.py
tests/unit/: test_operator_algebra.py  test_zeiss.py
