[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "biomatrix"
version = "1.0.0"
description = "N-dimensional drift correction and geometric filtering engine"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "BioMatrix Team" }
]
keywords = ["drift-correction", "smlm", "microscopy", "point-cloud", "filtering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
]

[project.optional-dependencies]
zeiss = ["pillow"]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]
all = ["biomatrix[zeiss,dev]"]

[project.urls]
Homepage = "https://github.com/biomatrix/biomatrix"
Documentation = "https://biomatrix.readthedocs.io"

[tool.hatch.build.targets.wheel]
packages = ["biomatrix"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
